--- a/page.html
+++ b/page.html
@@ -1,3 +1,6 @@
+<!-- adapted from Michael Bostock's force directed graph example
+     http://bl.ocks.org/mbostock/4062045
+-->
 <html>
 <meta charset="utf-8">
 <style>
