make nodes draggable

--- a/page.html
+++ b/page.html
@@ -50,7 +50,8 @@ d3.json("data.json", function(error, graph) {
   var node = svg.selectAll(".node")
       .data(graph.nodes)
     .enter().append("text")
-    .text(function(d, i){return d.name}).style("fill", function(d){return color(d.group);}).style("font-family", "Arial").style("font-size", 12);
+    .text(function(d, i){return d.name}).style("fill", function(d){return color(d.group);}).style("font-family", "Arial").style("font-size", 12)
+    .call(force.drag);
 
   node.append("title")
       .text(function(d) { return d.name; });
