--- a/graph.html
+++ b/graph.html
@@ -1,58 +1,126 @@
-<!-- adapted from Michael Bostock's force directed graph example
-http://bl.ocks.org/mbostock/4062045
--->
-<html>
+<!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-.node {
-    stroke: #fff;
-    stroke-width: 1.5px;
-}
-.link {
-    stroke: #999;
-    stroke-opacity: .6;
-}
-</style>
-<body>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script>
-var width = 5000,
-    height = 5000;
-var color = d3.scale.category20b();
-    var force = d3.layout.force()
-    .charge(-400)
-.linkDistance(250)
-    .size([width, height]);
-    var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
-    d3.json("data.json", function(error, graph) {
-            console.log(graph);
-            force
-            .nodes(graph.nodes)
-            .links(graph.links)
-            .start();
-            var link = svg.selectAll(".link")
-            .data(graph.links)
-            .enter().append("line")
-            .attr("class", "link")
-            .style("stroke-width", function(d) { return d.value });
-            var node = svg.selectAll(".node")
-            .data(graph.nodes)
-            .enter().append("text")
-            .text(function(d, i){return d.name}).style("fill", function(d){return color(d.group);}).style("font-family", "Arial").style("font-size", 12)
+    <style>
 
-            .call(force.drag);
-            node.append("title")
-            .text(function(d) { return d.name; });
-            force.on("tick", function() {
-                link.attr("x1", function(d) { return d.source.x; })
-                .attr("y1", function(d) { return d.source.y; })
-                .attr("x2", function(d) { return d.target.x; })
-                .attr("y2", function(d) { return d.target.y; });
-                node.attr("x", function(d) { return d.x; })
-                .attr("y", function(d) { return d.y; });
+    path.link {
+      fill: none;
+      stroke: #666;
+      stroke-width: 1.5px;
+    }
+
+    circle.original {
+      fill: mediumaquamarine;
+    }
+
+    text.original {
+      fill: mediumaquamarine;
+      font: 10px sans-serif;
+      pointer-events: none;
+    }
+    text.mouseover {
+        fill: tomato;
+        font: 24px sans-serif;
+    }
+    circle.mouseover {
+        fill: tomato;
+    }
+
+    </style>
+    <body>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script>
+
+        var color_link = d3.scale.category10();
+        var color_node = d3.scale.category20();
+
+        d3.json("data.json", function(error, graph) {
+
+            var width = 2500,
+                height = 2500;
+
+            var force = d3.layout.force()
+                .size([width, height])
+                .linkDistance(100)
+                .charge(-400)
+                .nodes(graph.nodes)
+                .links(graph.links)
+                .on("tick", tick)
+                .start();
+
+            var svg = d3.select("body").append("svg")
+                .attr("width", width)
+                .attr("height", height);
+
+
+            var path = svg.append("svg:g").selectAll("path")
+                .data(force.links())
+                .enter().append("svg:path")
+                .attr("class", "link")
+                .style("stroke-width", function(d) { return d.value; })
+                .style("stroke", function(d) { return color_link(d.value); });
+
+            var node = svg.selectAll(".node")
+                .data(force.nodes())
+                .enter().append("g")
+                .attr("class", "node")
+                .on("mouseover", mouseover)     
+                .on("mouseout", mouseout)     
+                .call(force.drag);
+
+            node.append("circle")
+                .attr("r", 5)
+                .attr("class", "original");
+
+            node.append("text")
+                .attr("x", 10)
+                .attr("dy", ".35em")
+                .attr("class", "original")
+                .text(function(d) { return d.name; });
+
+            function tick() {
+                path.attr("d", function(d) {
+                    var dx = d.target.x - d.source.x,
+                        dy = d.target.y - d.source.y,
+                        dr = Math.sqrt(dx * dx + dy * dy);
+
+                    return "M" + 
+                        d.source.x + "," + 
+                        d.source.y + "A" + 
+                        dr + "," + dr + " 0 0,1 " + 
+                        d.target.x + "," + 
+                        d.target.y;
                 });
-    });
-</script>
+
+                node .attr("transform", function(d) { 
+                        return "translate(" + d.x + "," + d.y + ")";
+                        });
+            }
+
+            function mouseover() {
+                d3.select(this).select("text").transition()
+                    .duration(800)
+                    .attr("x", 15)
+                    .attr("class", "mouseover")
+
+                d3.select(this).select("circle").transition()
+                    .duration(500)
+                    .attr("r", 10)
+                    .attr("class", "mouseover");
+            }
+
+            function mouseout() {
+                d3.select(this).select("text").transition()
+                    .duration(800)
+                    .attr("x", 10)
+                    .attr("class", "original");
+                d3.select(this).select("circle").transition()
+                    .duration(500)
+                    .attr("r", 5)
+                    .attr("class", "original");
+            }
+
+        });
+
+    </script>
+    </body>
 </html>
